<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#f0f0f0"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sqlite"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/field_name"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:hint="@string/field_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/field_email"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"
            android:textColor="@color/primary"
            android:hint="@string/field_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/field_phone"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:hint="@string/field_phone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/field_phone"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:weightSum="2"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                android:textColor="@color/primary"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                android:textColor="@color/primary"
                android:textSize="20dp"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <Button
            android:id="@+id/btAddCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addCustomer"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/secondary"/>

        <Button
            android:id="@+id/btSearchCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_searchCustomer"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:backgroundTint="@color/secondary"/>

    </LinearLayout>

</LinearLayout>